# gtokenchecker-rs

./: Cargo.toml  README.md
.github/: release-drafter.yml
.github/workflows/: build_win32.yml
src/: api.rs  checker.rs  main.rs  utils.rs
src/utils/: constants.rs  enums.rs  macros.rs  structs.rs
src/utils/structs/: connections.rs  guild.rs  main_info.rs  nitro.rs  relationship.rs
